fixed header padding on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,11 @@ html,body {
     color: #ffffff;
 }
 
+#header-row, #header-col {
+    padding-right: 0;
+    padding-left: 0;
+}
+
 .game-header-box {
     background-image: url(../images/headerbackground.png);
     color: #ffffff;
@@ -75,3 +80,9 @@ html,body {
     margin-top: 1px;
     margin-bottom: 4px;
 }
+
+@media only screen and (max-width: 460px) {
+    .game-header-box {
+        width: 100%;
+    }
+  }
